tests/baselines/reference/ES5For-ofTypeCheck9(strict=true).errors.txt
ES5For-ofTypeCheck9.ts(2,15): error TS2454: Variable 'union' is used before being assigned.
ES5For-ofTypeCheck9.ts(2,15): error TS2461: Type 'number | symbol | string[]' is not an array type.


==== ES5For-ofTypeCheck9.ts (2 errors) ====
    var union: string | string[] | number | symbol;
    for (let v of union) { }
                  ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.
                  ~~~~~
!!! error TS2461: Type 'number | symbol | string[]' is not an array type.